# FastAPIBase

./: .gitignore  404.html  Dockerfile  README.md  aerich.ini  env-example  fast_admin.py  index.html  mkdocs.yml  pyproject.toml
.cursor/rules/: best-pratices.mdc  django-friendly.mdc  faca-voce.mdc  python_best_practices.mdc
.github/workflows/: ci.yml
api/: index.html
auth/: index.html
contributing/: index.html
core/: config.py  main.py  routers.py  settings.py
core/auth/: api.py  models.py  permissions.py  repositories.py  routers.py  schemas.py  services.py
core/security/: security.py
core/users/: api.py  models.py  repositories.py  routers.py  schemas.py  services.py
docs/: api.md  auth.md  cli.md  contributing.md  index.md  security.md  usage.md
search/: search_index.json
site/: sitemap.xml
site/cli/: index.html
site/security/: index.html
site/usage/: index.html
tests/: test_api.py  test_security.py
